--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -61,6 +61,20 @@
 			}
 		],
 		"unicorn/prevent-abbreviations": "off"
-	}
+	},
+	"overrides": [
+		{
+			"files": ["*.js"],
+			"extends": ["plugin:@typescript-eslint/disable-type-checked"],
+			"rules": {
+				// turn off other type-aware rules
+				"deprecation/deprecation": "off",
+				"@typescript-eslint/internal/no-poorly-typed-ts-props": "off",
+
+				// turn off rules that don't apply to JS code
+				"@typescript-eslint/explicit-function-return-type": "off"
+			}
+		}
+	]
 }
 
