--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"style-loader": "^3.3.3",
 		"ts-loader": "^9.4.4",
 		"typescript": "^5.1.6",
+		"uglify-js": "^3.17.4",
 		"webpack": "^5.88.2",
 		"webpack-cli": "^5.1.4"
 	},
