done with contentLoader

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,7 +60,8 @@
 				}
 			}
 		],
-		"unicorn/prevent-abbreviations": "off"
+		"unicorn/prevent-abbreviations": "off",
+		"unicorn/prefer-top-level-await": "off"
 	},
 	"overrides": [
 		{
@@ -77,4 +78,3 @@
 		}
 	]
 }
-
