done with data extractor

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"build": "webpack",
 		"build:watch": "webpack --watch",
-		"lint": "eslint .",
+		"lint": "eslint ./src",
 		"prettier:write": "prettier --write ./src"
 	},
 	"author": "",
