--- a/package.json
+++ b/package.json
@@ -12,23 +12,24 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@types/jquery": "^3.5.17",
-		"@types/node": "^20.5.4",
-		"@typescript-eslint/eslint-plugin": "^6.4.1",
-		"@typescript-eslint/parser": "^6.4.1",
-		"css-loader": "^6.8.1",
-		"eslint": "^8.47.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-import": "^2.28.1",
-		"eslint-plugin-unicorn": "^48.0.1",
-		"html-loader": "^4.2.0",
-		"prettier": "^3.0.2",
-		"style-loader": "^3.3.3",
-		"svg-url-loader": "^8.0.0",
-		"ts-loader": "^9.4.4",
-		"typescript": "^5.1.6",
-		"uglify-js": "^3.17.4",
-		"webpack": "^5.88.2",
-		"webpack-cli": "^5.1.4"
+		"@types/jquery": "3.5.18",
+		"@types/node": "20.5.9",
+		"@typescript-eslint/eslint-plugin": "6.6.0",
+		"@typescript-eslint/parser": "6.6.0",
+		"css-loader": "6.8.1",
+		"eslint": "8.49.0",
+		"eslint-config-prettier": "9.0.0",
+		"eslint-plugin-import": "2.28.1",
+		"eslint-plugin-unicorn": "48.0.1",
+		"html-loader": "4.2.0",
+		"prettier": "3.0.3",
+		"style-loader": "3.3.3",
+		"svg-url-loader": "8.0.0",
+		"ts-loader": "9.4.4",
+		"typescript": "5.2.2",
+		"uglify-js": "3.17.4",
+		"webpack": "5.88.2",
+		"webpack-cli": "5.1.4"
 	}
 }
+
