--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,17 +22,14 @@
 		"prettier"
 	],
 	"rules": {
-		"eqeqeq": ["error", "smart"],
+		/* TEMPLATE RULES */
 
 		// TypeScript Rules
-		"@typescript-eslint/explicit-function-return-type": [
-			"warn",
-			{
-				"allowExpressions": true,
-				"allowTypedFunctionExpressions": true,
-				"allowHigherOrderFunctions": true
-			}
-		],
+		"@typescript-eslint/consistent-type-exports": "warn",
+		"@typescript-eslint/consistent-type-imports": "warn",
+		"@typescript-eslint/explicit-function-return-type": "warn",
+		"@typescript-eslint/explicit-member-accessibility": "warn",
+		"@typescript-eslint/prefer-readonly": "warn",
 		"@typescript-eslint/no-unused-vars": [
 			"warn",
 			{ "args": "all", "argsIgnorePattern": "^_" }
@@ -61,6 +58,8 @@
 			}
 		],
 		"unicorn/prevent-abbreviations": "off",
+
+		/* CUSTOM RULES */
 		"unicorn/prefer-top-level-await": "off"
 	},
 	"overrides": [
