--- a/package.json
+++ b/package.json
@@ -12,23 +12,25 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@types/jquery": "3.5.20",
-		"@types/node": "20.8.0",
-		"@typescript-eslint/eslint-plugin": "6.7.3",
-		"@typescript-eslint/parser": "6.7.3",
+		"@types/jquery": "3.5.23",
+		"@types/node": "20.8.7",
+		"@typescript-eslint/eslint-plugin": "6.8.0",
+		"@typescript-eslint/parser": "6.8.0",
 		"css-loader": "6.8.1",
-		"eslint": "8.50.0",
+		"eslint": "8.51.0",
 		"eslint-config-prettier": "9.0.0",
 		"eslint-plugin-import": "2.28.1",
 		"eslint-plugin-unicorn": "48.0.1",
 		"html-loader": "4.2.0",
 		"prettier": "3.0.3",
-		"style-loader": "3.3.3",
 		"svg-url-loader": "8.0.0",
-		"ts-loader": "9.4.4",
+		"ts-loader": "9.5.0",
 		"typescript": "5.2.2",
 		"uglify-js": "3.17.4",
-		"webpack": "5.88.2",
+		"webpack": "5.89.0",
 		"webpack-cli": "5.1.4"
+	},
+	"dependencies": {
+		"to-string-loader": "^1.2.0"
 	}
 }
