--- a/package.json
+++ b/package.json
@@ -19,18 +19,17 @@
 		"css-loader": "6.10.0",
 		"eslint": "8.56.0",
 		"eslint-config-prettier": "9.1.0",
+		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import": "2.29.1",
 		"eslint-plugin-unicorn": "50.0.1",
 		"html-loader": "5.0.0",
 		"prettier": "3.2.4",
 		"svg-url-loader": "8.0.0",
+		"to-string-loader": "^1.2.0",
 		"ts-loader": "9.5.1",
 		"typescript": "5.3.3",
 		"uglify-js": "3.17.4",
 		"webpack": "5.90.0",
 		"webpack-cli": "5.1.4"
-	},
-	"dependencies": {
-		"to-string-loader": "^1.2.0"
 	}
 }
