--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 		"eslint-plugin-unicorn": "50.0.1",
 		"html-loader": "5.0.0",
 		"prettier": "3.2.4",
+		"sass": "^1.70.0",
+		"sass-loader": "^14.1.0",
 		"svg-url-loader": "8.0.0",
 		"to-string-loader": "^1.2.0",
 		"ts-loader": "9.5.1",
