remove eslint for now

--- a/package.json
+++ b/package.json
@@ -12,26 +12,19 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@types/jquery": "3.5.29",
-		"@types/node": "20.11.19",
-		"@typescript-eslint/eslint-plugin": "7.0.2",
-		"@typescript-eslint/parser": "7.0.2",
-		"css-loader": "6.10.0",
-		"eslint": "8.56.0",
-		"eslint-config-prettier": "9.1.0",
-		"eslint-import-resolver-typescript": "^3.6.1",
-		"eslint-plugin-import": "2.29.1",
-		"eslint-plugin-unicorn": "51.0.1",
-		"html-loader": "5.0.0",
-		"prettier": "3.2.5",
-		"sass": "^1.71.1",
-		"sass-loader": "^14.1.1",
-		"svg-url-loader": "8.0.0",
+		"@types/jquery": "^3.5.30",
+		"@types/node": "^22.5.1",
+		"css-loader": "^7.1.2",
+		"html-loader": "^5.1.0",
+		"prettier": "^3.3.3",
+		"sass": "^1.77.8",
+		"sass-loader": "^16.0.1",
+		"svg-url-loader": "^8.0.0",
 		"to-string-loader": "^1.2.0",
-		"ts-loader": "9.5.1",
-		"typescript": "5.3.3",
-		"uglify-js": "3.17.4",
-		"webpack": "5.90.3",
-		"webpack-cli": "5.1.4"
+		"ts-loader": "^9.5.1",
+		"typescript": "^5.5.4",
+		"uglify-js": "^3.19.3",
+		"webpack": "^5.94.0",
+		"webpack-cli": "^5.1.4"
 	}
 }
