--- a/package.json
+++ b/package.json
@@ -12,19 +12,23 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@eslint/js": "^9.17.0",
 		"@types/jquery": "^3.5.32",
-		"@types/node": "^22.8.7",
-		"css-loader": "^7.1.2",
+		"@types/node": "^22.10.5",
+		"@typescript-eslint/parser": "^8.19.1",
+		"eslint": "^9.17.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-import-resolver-typescript": "^3.7.0",
+		"eslint-plugin-import-x": "^4.6.1",
+		"eslint-plugin-unicorn": "^56.0.1",
 		"html-loader": "^5.1.0",
-		"prettier": "^3.3.3",
-		"sass": "^1.80.6",
-		"sass-loader": "^16.0.3",
+		"prettier": "^3.4.2",
 		"svg-url-loader": "^8.0.0",
-		"to-string-loader": "^1.2.0",
 		"ts-loader": "^9.5.1",
-		"typescript": "^5.6.3",
+		"typescript": "^5.7.2",
+		"typescript-eslint": "^8.19.1",
 		"uglify-js": "^3.19.3",
-		"webpack": "^5.96.1",
+		"webpack": "^5.97.1",
 		"webpack-cli": "^5.1.4"
 	}
 }
