--- a/.prettierrc
+++ b/.prettierrc
@@ -14,6 +14,5 @@
 	"singleQuote": false,
 	"tabWidth": 4,
 	"trailingComma": "es5",
-	"useTabs": true,
-	"vueIndentScriptAndStyle": false
+	"useTabs": false
 }
