--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-	"name": "typescript",
-	"version": "1.0.0",
-	"main": "./out/index.js",
-	"type": "module",
-	"scripts": {
-		"build": "webpack",
-		"build:watch": "webpack --watch",
-		"lint": "eslint ./src",
-		"prettier:write": "prettier --write ./src"
-	},
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@eslint/js": "^9.37.0",
-		"@types/jquery": "^3.5.33",
-		"@types/node": "^24.7.2",
-		"@typescript-eslint/parser": "^8.46.1",
-		"eslint": "^9.37.0",
-		"eslint-config-prettier": "^10.1.8",
-		"eslint-import-resolver-typescript": "^4.4.4",
-		"eslint-plugin-import-x": "^4.16.1",
-		"eslint-plugin-unicorn": "^61.0.2",
-		"html-loader": "^5.1.0",
-		"prettier": "^3.6.2",
-		"svg-url-loader": "^8.0.0",
-		"ts-loader": "^9.5.4",
-		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.46.1",
-		"uglify-js": "^3.19.3",
-		"webpack": "^5.102.1",
-		"webpack-cli": "^6.0.1"
-	}
+    "name": "typescript",
+    "version": "1.0.0",
+    "main": "./out/index.js",
+    "type": "module",
+    "scripts": {
+        "build": "webpack",
+        "start": "webpack --watch",
+        "export": "webpack --mode production",
+        "lint": "eslint",
+        "format": "prettier --write ."
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@eslint/js": "^9.37.0",
+        "@total-typescript/ts-reset": "^0.6.1",
+        "@types/jquery": "^3.5.33",
+        "@types/node": "^24.7.2",
+        "@typescript-eslint/parser": "^8.46.1",
+        "eslint": "^9.37.0",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-import-resolver-typescript": "^4.4.4",
+        "eslint-plugin-import-x": "^4.16.1",
+        "eslint-plugin-unicorn": "^61.0.2",
+        "html-loader": "^5.1.0",
+        "prettier": "^3.6.2",
+        "svg-url-loader": "^8.0.0",
+        "ts-loader": "^9.5.4",
+        "typescript": "^5.9.3",
+        "typescript-eslint": "^8.46.1",
+        "uglify-js": "^3.19.3",
+        "webpack": "^5.102.1",
+        "webpack-cli": "^6.0.1"
+    }
 }
